# DataportalTool

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  LICENSE  LICENSE.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  tox.ini
.github/workflows/: ci.yml
scripts/: check.sh  create-venv.sh  test-upload-sizes.sh
src/: README.md  main.py  namingconvention.md
src/dataportaltools/: banan.py  main.py
src/dataportaltools/local_utils/: __init__.py  config.py  upload.py  utils.py  wcib_format.py
src/toolslib/: __init__.py  upload.py  utils.py
tests/: test_config.py  test_main.py  test_upload.py  test_utils.py
